<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PilihKategori">


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#01FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backicon" />

    <TextView
        android:id="@+id/pilih_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/margarine"
        android:gravity="center"
        android:text="@string/pilih_kategori_geometri"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <View
        android:id="@+id/garis"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilih_kategori" />

    <View
        android:id="@+id/gariss"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <TextView
        android:id="@+id/instruksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/margarine"
        android:gravity="center"
        android:text="@string/pilih_jenis_bangunan_untuk_menghitung_luas_atau_volume"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gariss" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/garis">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/bangun_datar"
                android:scaleType="centerCrop"
                android:src="@drawable/bangundatar" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/bangun_ruang"
                android:scaleType="centerCrop"
                android:src="@drawable/bangunruang" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/calculator"
                android:scaleType="centerCrop"
                android:src="@drawable/calculator" />

        </LinearLayout>
    </HorizontalScrollView>


    <FrameLayout
        android:layout_width="410dp"
        android:layout_height="116dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruksi">


        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bgtabbar" />


        <LinearLayout
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_gravity="center|bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">


            <ImageButton
                android:id="@+id/tab_home"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="35dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/home"
                android:scaleType="centerCrop"
                android:src="@drawable/barhome" />


            <ImageButton
                android:id="@+id/tab_flateshape"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="35dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/flateshape"
                android:scaleType="centerCrop"
                android:src="@drawable/barflateshape" />


            <ImageButton
                android:id="@+id/tab_solidshape"
                android:layout_width="45dp"
                android:layout_height="44dp"
                android:layout_marginEnd="35dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/solidshape"
                android:scaleType="centerCrop"
                android:src="@drawable/barsolidshape" />


            <ImageButton
                android:id="@+id/tab_calculate"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/calculate"
                android:scaleType="centerCrop"
                android:src="@drawable/barcalculate" />
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>