<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Persegi">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="477dp"
        android:layout_height="600dp"
        android:src="@drawable/backgroundpucat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.955" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="410dp"
        android:layout_height="120dp"
        android:src="@drawable/backgroundputih"
        app:layout_constraintBottom_toTopOf="@+id/tab_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/backgroundkuning"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilih_kategori"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="287dp"
        android:backgroundTint="#01FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/infoBtn"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backicon" />

    <ImageButton
        android:id="@+id/infoBtn"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#01FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/infoicon" />

    <TextView
        android:id="@+id/pilih_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/margarine"
        android:gravity="center"
        android:text="@string/ayo_menghitung_luas_persegi"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn" />

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:src="@drawable/bgtabbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_image">


        <ImageButton
            android:id="@+id/tab_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/home"
            android:scaleType="centerCrop"
            android:src="@drawable/barhome" />


        <ImageButton
            android:id="@+id/tab_flateshape"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/flateshape"
            android:scaleType="centerCrop"
            android:src="@drawable/barflateshape" />


        <ImageButton
            android:id="@+id/tab_solidshape"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginEnd="35dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/solidshape"
            android:scaleType="centerCrop"
            android:src="@drawable/barsolidshape" />


        <ImageButton
            android:id="@+id/tab_calculate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/calculate"
            android:scaleType="centerCrop"
            android:src="@drawable/barcalculate" />
    </LinearLayout>

    <TextView
        android:id="@+id/masukannilai"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="MASUKKAN NILAI !"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/panjangsisi"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/panjang_sisi"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <EditText
        android:id="@+id/inputpanjangsisi"
        android:layout_width="219dp"
        android:layout_height="67dp"
        android:fontFamily="@font/poppins"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/panjangsisi"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/buttonHitung"
        android:layout_width="198dp"
        android:layout_height="68dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hitung_luas"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/hasilLuas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins"
        android:shadowColor="#FCF5FD"
        android:text="Luas: "
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonHitung"
        app:layout_constraintVertical_bias="0.411" />

</androidx.constraintlayout.widget.ConstraintLayout>