<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/shapesolver"
        android:layout_width="347dp"
        android:layout_height="71dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/lakki_reddy"
        android:text="@string/shape_solver"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/shortcut_to_the_most_frequently_used_feature"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapesolver" />

    <ImageButton
        android:id="@+id/icon_persegi"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortcut"
        app:srcCompat="@drawable/persegi" />

    <ImageButton
        android:id="@+id/icon_lingkaran"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/icon_persegi"
        app:layout_constraintTop_toBottomOf="@+id/shortcut"
        app:srcCompat="@drawable/lingkaran" />

    <ImageButton
        android:id="@+id/icon_balok"
        android:layout_width="122dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/icon_persegi"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortcut"
        app:srcCompat="@drawable/balok" />

    <TextView
        android:id="@+id/infoapk"
        android:layout_width="361dp"
        android:layout_height="97dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/margarine"
        android:gravity="center"
        android:text="@string/mudah_dan_cepat_hitung_volume_luas_bangun"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_persegi" />

    <ImageButton
        android:id="@+id/buttonmulai"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoapk"
        app:srcCompat="@drawable/buttonmulai" />

</androidx.constraintlayout.widget.ConstraintLayout>